Made compatible with Java 11. Added functionality to update active configuration. This is required to be able to use this library in the current LogonBox VPN server.